# scrap-python-luka

./: .gitignore  main.py  pyproject.toml  requirements.txt
currency/: middlewares.py  settings.py
currency/spiders/: cambi.py  dollar_house.py  inka_money.py  rextie.py  roblex.py
luka-scrap/: __init__.py  function.json
utils/: data_from_jsonl.py  decorators.py
